[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/2d/Reload.png" type="Texture" id=1]
[ext_resource path="res://Systems/Settings/set_0.gd" type="Script" id=2]

[sub_resource type="ImageTexture" id=1]

[node name="set_0" type="HBoxContainer"]
margin_right = 536.0
margin_bottom = 29.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="set_label" type="Label" parent="."]
margin_right = 266.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 7
align = 2

[node name="set_reload_button" type="TextureButton" parent="."]
visible = false
margin_left = 258.0
margin_right = 278.0
margin_bottom = 29.0
rect_min_size = Vector2( 20, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
texture_disabled = SubResource( 1 )
texture_focused = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="set_option_button" type="OptionButton" parent="."]
margin_left = 270.0
margin_right = 536.0
margin_bottom = 29.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="set_check_box" type="CheckBox" parent="."]
visible = false
margin_left = 440.0
margin_right = 464.0
margin_bottom = 29.0
focus_mode = 0
size_flags_horizontal = 3

[node name="set_h_slider" type="HSlider" parent="."]
visible = false
margin_left = 282.0
margin_right = 536.0
margin_bottom = 16.0
focus_mode = 0
size_flags_horizontal = 3

[node name="set_spin_box" type="SpinBox" parent="."]
visible = false
margin_left = 415.0
margin_right = 489.0
margin_bottom = 29.0
size_flags_horizontal = 6
align = 1

[connection signal="item_selected" from="set_option_button" to="." method="_on_set_option_button_item_selected"]
[connection signal="toggled" from="set_check_box" to="." method="_on_set_check_box_toggled"]
[connection signal="value_changed" from="set_h_slider" to="." method="_on_set_h_slider_value_changed"]
[connection signal="value_changed" from="set_spin_box" to="." method="_on_set_spin_box_value_changed"]
